--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "material-design-lite": "^1.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5"
+    "vuefire": "^1.4.5",
+    "vuejs-datepicker": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
