--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5",
-    "vuejs-datepicker": "^1.2.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
