--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5"
   },
